<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yikego</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_title">社区网购超市</string>
    <string name="splash_web">www.yikego.com</string>
    <string name="item_text_arrive">1000米内30分钟到达</string>
    <string name="item_text_takeaway">30元起送</string>
    <string name="title_map">地图</string>
	<string name="title_import">请输入超市名称</string>
	<string name="title_import_goods">请输入商品名称</string>
	<string name="text_define"> 确定</string>
	<string name="text_title_goods_detail"> 商品详情</string>
	<string name="text_enter_market_detail">进入店铺</string>
	<string name="text_goods_Description">商品描述</string>
	<string name="confirm_buy">立刻购买</string>
    <string name="main_left_login_user">登录/注册</string>
    <string name="main_left_order_search">订单查询</string>
    <string name="main_left_shop_score">购物积分</string>
    <string name="main_left_shop_quan">购物券</string>
    <string name="main_left_feedback">意见反馈</string>
    <string name="main_left_setting">设置</string>
</resources>