<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
            android:orientation="horizontal"
            android:id="@+id/head_image_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip">
        <ImageView
                android:id="@+id/headImageView"
                android:layout_width="72.0dip"
                android:layout_height="72.0dip"
                android:src="@drawable/ic_main_left_user"
                android:adjustViewBounds="true"
                android:maxWidth="80.0dip"
                android:maxHeight="80.0dip"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />
        <TextView
                android:textSize="18.0sp"
                android:textColor="@color/white"
                android:id="@+id/NameTextView"
                android:paddingTop="24.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:maxWidth="200.0dip"
                android:text="@string/main_left_login_user"
                android:singleLine="true"
                android:layout_below="@id/headImageView"
                android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/left_menu_order_search"
            android:layout_marginTop="@dimen/left_menu_item_margin_top"
            android:layout_marginLeft="@dimen/left_menu_imageview_margin_left"
            android:layout_below="@+id/head_image_layout"
            >
        <ImageView
                android:id="@+id/left_menu_order_search_img"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_order_search"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/left_menu_order_search_img"
                android:layout_marginLeft="@dimen/left_menu_textview_margin_left"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/main_left_order_search"
                android:textSize="18.0sp"
                android:textColor="@color/white"
                android:singleLine="true"
                />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/left_menu_shop_score"
                android:layout_marginTop="@dimen/left_menu_item_margin_top"
                android:layout_marginLeft="@dimen/left_menu_imageview_margin_left"
                android:layout_below="@+id/left_menu_order_search"
                >
            <ImageView
                    android:id="@+id/left_menu_shop_score_img"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_shop_score"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/left_menu_shop_score_img"
                    android:layout_marginLeft="@dimen/left_menu_textview_margin_left"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/main_left_shop_score"
                    android:textSize="18.0sp"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    />
        </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/left_menu_shop_quan"
            android:layout_marginTop="@dimen/left_menu_item_margin_top"
            android:layout_marginLeft="@dimen/left_menu_imageview_margin_left"
            android:layout_below="@+id/left_menu_shop_score"
            >
        <ImageView
                android:id="@+id/left_menu_shop_quan_img"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_shop_quan"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/left_menu_shop_quan_img"
                android:layout_marginLeft="@dimen/left_menu_textview_margin_left"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/main_left_shop_quan"
                android:textSize="18.0sp"
                android:textColor="@color/white"
                android:singleLine="true"
                />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/left_menu_feedback"
            android:layout_marginTop="@dimen/left_menu_item_margin_top"
            android:layout_marginLeft="@dimen/left_menu_imageview_margin_left"
            android:layout_below="@+id/left_menu_shop_quan"
            >
        <ImageView
                android:id="@+id/left_menu_feedback_img"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_feedback"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/left_menu_feedback_img"
                android:layout_marginLeft="@dimen/left_menu_textview_margin_left"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/main_left_feedback"
                android:textSize="18.0sp"
                android:textColor="@color/white"
                android:singleLine="true"
                />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/left_menu_setting"
            android:layout_marginTop="@dimen/left_menu_item_margin_top"
            android:layout_marginLeft="@dimen/left_menu_imageview_margin_left"
            android:layout_below="@+id/left_menu_feedback"
            >
        <ImageView
                android:id="@+id/left_menu_setting_img"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_setting"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/left_menu_setting_img"
                android:layout_marginLeft="@dimen/left_menu_textview_margin_left"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/main_left_feedback"
                android:textSize="18.0sp"
                android:textColor="@color/white"
                android:singleLine="true"
                />
    </RelativeLayout>

    <RelativeLayout
                android:id="@+id/rl_quit"
                android:layout_width="wrap_content"
                android:layout_height="40.0dip"
                android:visibility="gone"
                android:layout_marginLeft="10.0dip"
                android:layout_marginBottom="20.0dip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true">
            <ImageView
                    android:id="@+id/iv_quit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_main_left_quit"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@null" />
            <TextView
                    android:textSize="17.0sp"
                    android:textColor="#f3f3f3"
                    android:id="@+id/tv_quit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="退出登录"
                    android:layout_toRightOf="@id/iv_quit"
                    android:layout_centerVertical="true" />
        </RelativeLayout>
</RelativeLayout>
